--- a/miniprogram/pages/addcomment/addcomment.wxml
+++ b/miniprogram/pages/addcomment/addcomment.wxml
@@ -3,8 +3,8 @@
     <view class="info">
       <image class="cover" src="{{detail.img}}" mode="aspectFit"></image>
       <view class="name">{{detail.name}}</view>
-      <textarea class="input-comment" placeholder="请输入你的影片内容" adjust-position="true" bindinput="getText" auto-focus="true"></textarea>
-      <button >录音</button>
+      <textarea hidden="{{comment.type == 'voice'}}" class="input-comment" placeholder="请输入你的影片内容" adjust-position="true" bindinput="getText" auto-focus="true"></textarea>
+      <button hidden="{{comment.type == 'text'}}">录音</button>
     </view>
     <view class="bg"></view>
   </view>
