--- a/miniprogram/pages/addcomment/addcomment.wxss
+++ b/miniprogram/pages/addcomment/addcomment.wxss
@@ -55,10 +55,10 @@ page {
 }
 
 .name {
-  font-size: 20px;
+  font-size: 40rpx;
   font-weight: bolder;
-  line-height: 40px;
   margin-bottom: 20px;
+  margin-top:10px;
 }
 
 .footer-hover{
