--- a/miniprogram/pages/detail/detail.wxss
+++ b/miniprogram/pages/detail/detail.wxss
@@ -7,7 +7,7 @@ page {
   padding-right: 15px;
   box-sizing: border-box;
   padding-top: 20px;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
   height: 100%;
 }
 
@@ -24,13 +24,10 @@ page {
   width: 100%;
   text-align: center;
   box-sizing: border-box;
-  top:420rpx;
-  padding-top:20px;
+  top:300rpx;
+  padding-top:10px;
   padding-left:40px;
   padding-right: 40px;
-}
-.minidetail {
-  top:140px;
 }
 
 .name {
@@ -40,7 +37,7 @@ page {
 
 .summary {
   padding-top:10px;
-  font-size: 17px;
+  font-size: 15px;
   color:#353535;
   overflow: hidden;
   display: -webkit-box;
@@ -48,10 +45,7 @@ page {
   word-break:break-all;
   -webkit-box-orient: vertical;
   -webkit-line-clamp:7; 
-}
-
-.mini {
-  font-size: 14px;
+  text-align: left;
 }
 
 .cover {
@@ -76,7 +70,7 @@ page {
 .button-sp-area{
   bottom: 0;
   margin: 0 auto;
-  padding-bottom: 15px;
+  padding-bottom: 20px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top:15px;
@@ -91,7 +85,7 @@ page {
 }
 
 button:not([size='mini']) {
-  width: 300rpx;
+  width: 260rpx;
 }
 
 .btn-icon {
@@ -105,6 +99,9 @@ button {
   justify-content: center;
   overflow:hidden;
   white-space:nowrap;
+  padding: 8px 8px;
+  font-size:14px;
+  line-height: 24px;
 }
 
 
