--- a/miniprogram/pages/addcomment/addcomment.wxss
+++ b/miniprogram/pages/addcomment/addcomment.wxss
@@ -1,16 +1,16 @@
 .footer{
   bottom: 0;
   padding-bottom:calc(env(safe-area-inset-bottom)/2);
-  height: rpx;
+  height: 50px;
   position: fixed;
   width: 100%;
   background:#07c160;
   color: white;
   line-height: 100rpx;
-  text-align: center;
+  align-items: center;
 }
 
-.comment-cart{
+.comment-card{
   height: 100%;
   position: relative;
   box-sizing: border-box;
@@ -29,7 +29,7 @@
 .bg {
   background:white;
   margin-top:40px;
-  height: 85%;
+  height: 82%;
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 5px;
@@ -63,4 +63,50 @@ page {
 
 .footer-hover{
   opacity: 0.7;
+}
+
+.done-btn:not([size='mini']){
+  width: 750rpx;
+  height: 50px;
+}
+
+.done-btn{
+  border-radius: 0;
+  background:#07c160;
+  color: white;
+  line-height: 34px;
+}
+
+
+.record-btn{
+  top:70%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  overflow:hidden;
+  white-space:nowrap;
+  padding: 8px 8px;
+  font-size:14px;
+  line-height: 24px;
+}
+
+.record-btn:not([size='mini']){
+  width: 260rpx;
+  left:50%;
+  margin-left: -130rpx;
+}
+
+.btn-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+}
+
+canvas{
+  top:50%;
+  left:50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  position: fixed;
+  z-index: 999;
 }
