--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,15 +1,23 @@
 <view class="page">
+  <view class="comment">
+    <image class="poster" src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2563780504.jpg" mode="aspectFit" ></image>
+    <view class="name">哪吒之魔童降世</view>
+    <view class="userInfo">
+      <image class="userAvatar" src="https://wx.qlogo.cn/mmopen/vi_32/Q3auHgzwzM6PvyzKwOPLbRYN3uuVAexatHO4jb4SvWZ9LBBKwMrIK3bpYpwibhwEZmCdiboIHScSicVJ2qWfS82Qw/132" mode="aspectFit"></image>
+      <view class="userNamer">王震给你推荐了一部电影</view>
+    </view>
+  </view>
   <view class="weui-footer_fixed-bottom">
     <view class="weui-tabbar">
 
-      <navigator url="/pages/movies/movies" class="weui-tabbar__item"> 
-          <image src="/images/fire.png" class="weui-tabbar__icon"></image>
-          <view class="weui-tabbar__label">热门</view>
+      <navigator url="/pages/movies/movies" class="weui-tabbar__item">
+        <image src="/images/fire.png" class="weui-tabbar__icon"></image>
+        <view class="weui-tabbar__label">热门</view>
       </navigator>
 
       <navigator url="/pages/my/my" class="weui-tabbar__item">
-          <image src="/images/account.png" class="weui-tabbar__icon"></image>
-          <view class="weui-tabbar__label">我的</view>
+        <image src="/images/account.png" class="weui-tabbar__icon"></image>
+        <view class="weui-tabbar__label">我的</view>
       </navigator>
 
     </view>
