--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -17,3 +17,35 @@
   font-weight: bolder;
   color: #353535;
 }
+
+.comment {
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.poster {
+  height: 65vh;
+}
+
+.name {
+  margin-top: 10px;
+  font-size: 24px;
+}
+
+.userInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.userAvatar {
+  height: 80rpx;
+  width: 80rpx;
+  border-radius: 50%;
+  margin-right: 10px;
+}
