--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -49,3 +49,9 @@
   border-radius: 50%;
   margin-right: 10px;
 }
+
+.movieInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
