--- a/miniprogram/pages/commentdetail/commentdetail.wxss
+++ b/miniprogram/pages/commentdetail/commentdetail.wxss
@@ -1,1 +1,156 @@
-/* miniprogram/pages/commentdetail/comment de tai l.wxss */
+page{
+  height: 100%;
+}
+
+.card{
+  padding: 20px;  
+  padding-bottom: 30px;
+  height: 100%;
+  width: 100%;
+  box-sizing:border-box;
+}
+.block{
+  width: 100%;
+  height: 40px;
+}
+
+.bg{
+  background:white;
+  width: 100%;
+  height: calc(100vh - 90px);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  position: relative;
+}
+
+.info{
+  position: absolute;
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 99;
+  left: 50%;
+  width: 600rpx;
+  margin-left:-300rpx;
+}
+
+.cover{
+  height: 280rpx;
+}
+
+.name {
+  font-size: 20px;
+  font-weight: bolder;
+  margin-bottom: 20px;
+  margin-top:10px;
+}
+
+.userInfo{
+  width: 550rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.userAvatar {
+  height: 80rpx;
+  width: 80rpx;
+  border-radius: 50%;
+  overflow:hidden;
+  margin-right: 10px;
+}
+
+.button-sp-area{
+  padding-bottom: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top:15px;
+  bottom: 0;
+  text-align:center;
+  z-index: 1;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  box-sizing: border-box;
+  justify-content:space-between;
+}
+
+button:not([size='mini']) {
+  width: 260rpx;
+}
+
+.btn-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  overflow:hidden;
+  white-space:nowrap;
+  padding: 8px 8px;
+  font-size:14px;
+  line-height: 24px;
+}
+
+.text {
+  margin-top:20px;
+  width: 550rpx;
+  display: flex;
+  flex-direction: row;
+}
+
+.quote {
+  height: 40rpx;
+  width: 80rpx;
+  margin-right: 10px;
+}
+
+.content {
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp:7; 
+  text-align: left;
+}
+
+.record{
+  margin-top:20px;
+  width: 550rpx;
+  display: flex;
+  flex-direction: row;
+}
+
+.voice{
+  width: 160px;
+  height: 40px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: lightgray;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  padding: 8px 10px;
+  box-sizing: border-box;
+}
+
+.play-icon{
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+}
+
+.pause-icon{
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+}
+
+.duration{
+  height: 24px;
+  line-height: 24px;
+}
