--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <view class="page">
   <view class="comment">
-    <navigator class="movieInfo" url="/pages/detail/detail?id={{movieId}}">
+    <navigator class="movieInfo" url="/pages/detail/detail?id={{movieId}}" hover-class="poster-hover">
       <image class="poster" src="{{poster}}" mode="aspectFit"></image>
       <view class="name">{{name}}</view>
     </navigator>
