--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -25,14 +25,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 750rpx;
+  box-sizing: border-box;
 }
 
 .poster {
-  height: 65vh;
+  height: 750rpx;
 }
 
 .name {
-  margin-top: 10px;
+  margin-top: 20px;
   font-size: 24px;
 }
 
@@ -54,4 +56,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.poster-hover{
+  opacity: 0.7;
 }
