--- a/miniprogram/pages/addcomment/addcomment.wxss
+++ b/miniprogram/pages/addcomment/addcomment.wxss
@@ -1,6 +1,6 @@
 .footer{
   bottom: 0;
-  padding-bottom:calc(env(safe-area-inset-bottom)/2);
+  padding-bottom:env(safe-area-inset-bottom);
   height: 46px;
   position: fixed;
   width: 100%;
