--- a/miniprogram/pages/commentlist/commentlist.wxss
+++ b/miniprogram/pages/commentlist/commentlist.wxss
@@ -1,4 +1,3 @@
-/* miniprogram/pages/commentlist/commentlist.wxss */
 
 .userInfo {
   display: flex;
@@ -77,4 +76,5 @@
   line-height: 46px;
   font-size: 17px;
   text-align: center;
+  padding-bottom:env(safe-area-inset-bottom);
 }
