--- a/miniprogram/pages/my/my.wxml
+++ b/miniprogram/pages/my/my.wxml
@@ -1,2 +1,24 @@
-<!--pages/my/my.wxml-->
-<text>pages/my/my.wxml</text>
+<view class="page">
+  <view class="comment-list">
+    <view class="switch" bindtap="switchAction">收藏的影评 V</view>
+    <view class="comment-card" wx:key="index" id="{{item._id}}" wx:for="{{comments}}" wx:for-item="item" hover-class="item-hover" bindtap="tap">
+      <image class="movie-img" src="{{item.detail.img}} " mode="aspectFill"></image>
+      <view class="comment">
+        <view class="name">{{item.detail.name}}</view>
+        <view wx:if="{{item.comment.text}}" class="text">{{item.comment.text}}</view>
+        <view wx:if="{{item.comment.record.duration}}" class="voice" bindtap="playVoice">
+          <image class="play-icon" src="/images/play-circle.png" mode="aspectFit"></image>
+          <view class="duration">{{item.comment.record.duration}}s</view>
+        </view>
+        <view class="userInfo">
+          <image class="userAvatar" src="{{item.comment.userInfo.avatarUrl}}" mode="aspectFit"></image>
+          <view class="userName">{{item.comment.userInfo.nickName}}</view>
+        </view>
+      </view>
+    </view>
+  </view>
+
+  <view class="weui-footer_fixed-bottom">
+    <view class="back" bindtap="home">回到首页</view>
+  </view>
+</view>
