--- a/miniprogram/pages/my/my.wxss
+++ b/miniprogram/pages/my/my.wxss
@@ -1,1 +1,120 @@
-/* pages/my/my.wxss */
+.back {
+  height: 46px;
+  background: white;
+  z-index: 999;
+  border: 1rpx solid rgba(0, 0, 0, 0.1);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  line-height: 46px;
+  font-size: 17px;
+  text-align: center;
+  padding-bottom:env(safe-area-inset-bottom);
+}
+
+.comment-card {
+  background: white;
+  height: 150px;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+  box-sizing:border-box;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.movie-img {
+  height: 100%;
+  width: 107px;
+}
+
+page {
+  padding-left: 15px;
+  padding-right: 15px;
+  box-sizing: border-box;
+  padding-top: 20px;
+}
+
+.comment {
+  padding-left:15px;
+  padding-right: 15px;
+  box-sizing:border-box;
+  width: calc(100% - 110px);
+}
+
+.voice {
+  width: 160px;
+  height: 40px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: lightgray;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  padding: 8px 10px;
+  box-sizing: border-box;
+  margin-top: 10px;
+}
+
+.play-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+}
+
+.duration {
+  height: 24px;
+  line-height: 24px;
+}
+
+.userAvatar {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px;
+}
+
+.userName {
+  font-size: 14px;
+  line-height: 30px;
+}
+
+.text {
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp:2; 
+  text-align: left;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.userInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.name {
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 10px;
+}
+
+.comment-list {
+  margin-top: 20px;
+}
+
+.switch {
+  text-align: center;
+  color: orangered;
+}
+
+.item-hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  opacity: 0.7;
+}
