--- a/miniprogram/pages/my/my.wxml
+++ b/miniprogram/pages/my/my.wxml
@@ -1,6 +1,9 @@
 <view class="page">
-  <view class="comment-list">
-    <view class="switch" bindtap="switchAction">收藏的影评 V</view>
+
+  <button class="login-btn" type="primary" wx:if="{{!userInfo}}" open-type="getUserInfo" bindgetuserinfo="onTapLogin">登录</button>
+
+  <view class="comment-list" wx:if="{{userInfo}}">
+    <view class="switch" bindtap="switchAction">{{tag}} V</view>
     <view class="comment-card" wx:key="index" id="{{item._id}}" wx:for="{{comments}}" wx:for-item="item" hover-class="item-hover" bindtap="tap">
       <image class="movie-img" src="{{item.detail.img}} " mode="aspectFill"></image>
       <view class="comment">
